Only use vertical margin on block in sample.

--- a/example.html
+++ b/example.html
@@ -34,7 +34,7 @@
       height: 2px;
     }
     .block {
-      margin: 10px;
+      margin: 10px 0;
       height: 300px;
       border: 2px solid gray;
       border-radius: 3px;
