--- a/example.html
+++ b/example.html
@@ -57,7 +57,7 @@
   </style>
   <script src="build/build.js"></script>
   <script>
-    var Drag = require('move-element');
+    var Drag = require('drag-element');
     var el = document.body.querySelector('.container');
     var drag = new Drag(el);
     document.body.insertBefore(drag.display, el);
